--- a/Publications.tex
+++ b/Publications.tex
@@ -304,8 +304,8 @@ Publons:\ \  \textbf{\url{https://publons.com/researcher/1603078/marco-aurelio-n
 
 % De uso exclusivo UPV
 \section{Colaborador en Proyectos de Investigacion y Desarrollo Tecnológico}
-\begin{refsection}[ColaboradorPI_DT]
-\nocite{*}
+\begin{refsection}[COLABORADOR]
+\nocite{*}                                           
 \printbibliography[heading={none}, keyword=COLABORADOR, resetnumbers=true]
 \end{refsection}
 
