--- a/Publications.tex
+++ b/Publications.tex
@@ -306,7 +306,7 @@ Publons:\ \  \textbf{\url{https://publons.com/researcher/1603078/marco-aurelio-n
 \section{Colaborador en Proyectos de Investigacion y Desarrollo Tecnológico}
 \begin{refsection}[COLABORADOR]
 \nocite{*}                                           
-\printbibliography[heading={none}, keyword=COLABORADOR, resetnumbers=true]
+%\printbibliography[heading={none}, keyword=COLABORADOR, resetnumbers=true]
 \end{refsection}
 
 
