--- a/Publications.tex
+++ b/Publications.tex
@@ -303,11 +303,11 @@ Publons:\ \  \textbf{\url{https://publons.com/researcher/1603078/marco-aurelio-n
 \end{refsection}
 
 % De uso exclusivo UPV
-\section{Colaborador en Proyectos de Investigacion y Desarrollo Tecnológico}
-\begin{refsection}[COLABORADOR]
-\nocite{*}                                           
+%\section{Colaborador en Proyectos de Investigacion y Desarrollo Tecnológico}
+%\begin{refsection}[COLABORADOR]
+%\nocite{*}                                           
 %\printbibliography[heading={none}, keyword=COLABORADOR, resetnumbers=true]
-\end{refsection}
+%\end{refsection}
 
 
 
