--- a/ColaboradorProyectos.bib
+++ b/ColaboradorProyectos.bib
@@ -1,4 +1,4 @@
-@misc{2023_DerechoAutor1,
+@unpublished{2023_DerechoAutor1,
   author       = "José Hugo Barrón-Zambrano and Alan Díaz-Manríquez and Juan Carlos Elizondo-Leal and José David Filoteo-Razo  and  Daniel López-Aguirre and  José Ramón Martínez-Angulo and Marco Aurelio Nuño-Maganda and Vicente Paul Saldivar-Alonso and Jesús Sierra Martínez"
   title        = "Aplicación Móvil para el Monitoreo de la Ingesta de Materia Seca en Pequeños Rumiantes",
   howpublished = "Programa de Computación con Certificado de Registro Publico del Derecho de Autor ante el Instituto Nacional de Derecho de Autor.",
@@ -8,7 +8,7 @@
   annote       = ""
 }
 
-@misc{2022_TransferenciaTecnologica,
+@unpublished{2022_TransferenciaTecnologica,
   author       = "Yahir Hernández-Mier and Said Polanco-Martagón and Marco Aurelio Nuño-Maganda",
   title        = "Monitoreo remoto de refrigeradores y cámaras frías de la red de frío del area de vacunación universal de la Secretaría de Salud",
   howpublished = "Transferencia Tecnologica, Secretaría de Salud Tamaulipas",
@@ -18,7 +18,7 @@
   annote       = ""
 }
 
-@misc{2014_ProyectoPRODEPCA,
+@unpublished{2014_ProyectoPRODEPCA,
   author       = "Hiram Herrera-Rivas and Yahir Hernández-Mier and Marco Aurelio Nuño-Maganda and Adrian Lopez-Mayorga and Hector Aviles-Arriaga",
   title        = "Desarrollo de un Vehículo Robótico Terrestre con Navegación Autónoma Utilizable como Guía de Visitantes",
   howpublished = "Proyecto de Cuerpo Academico PRODEP, 2013-2014",
@@ -28,7 +28,7 @@
   annote       = ""
 }
 
-@misc{2014_ProyectoPRODEPFOMIX,
+@unpublished{2014_ProyectoPRODEPFOMIX,
   author       = "Yahir Hernández-Mier and Hiram Herrera-Rivas and Marco Aurelio Nuño-Maganda",
   title        = "Sistema Computacional para la Clasificación Automática de Cromosomas Auxiliar en el Diagnóstico Temprano de Enfermedades Genéticas",
   howpublished = "Proyecto CONACYT - Fondos Mixtos Tamaulipas",
@@ -38,7 +38,7 @@
   annote       = ""
 }
 
-@misc{2011_ProyectoGlucometro,
+@unpublished{2011_ProyectoGlucometro,
   author       = "Yahir Hernández-Mier and Hiram Herrera-Rivas and Marco Aurelio Nuño-Maganda",
   title        = "Prototipo Mecatr\'onico Miniaturizado para Automatizar Procesos de Car\'acter Preventivo y Predictivo, Auxiliar en la toma de Decisiones en el Tratamiento de la Diabetes Mellitus",
   howpublished = "Proyecto CONACYT - Fondos Mixtos Tamaulipas",
@@ -48,7 +48,7 @@
   annote       = ""
 }
 
-@misc{2005_ProyectoCamaraInfraroja,
+@unpublished{2005_ProyectoCamaraInfraroja,
   author       = "Miguel Arias-Estrada and Marco Aurelio Nuño-Maganda",
   title        = "C\'amara Infrarroja",
   howpublished = "Proyecto CONACYT - Fondos Sectoriales (MARINA-2003-C02-11896/B1)",
@@ -58,7 +58,7 @@
   annote       = ""
 }
 
-@misc{2005_ProyectoCamaraInfraroja,
+@unpublished{2005_ProyectoCamaraInfraroja,
   author       = "Miguel Arias-Estrada and Marco Aurelio Nuño-Maganda",
   title        = "Sistema de Vigilancia A\'erea (SVA)",
   howpublished = "Proyecto CONACYT - Fondos Sectoriales (MARINA-2002-C01-4636)",
