--- a/ColaboradorProyectos.bib
+++ b/ColaboradorProyectos.bib
@@ -1,70 +1,11 @@
-@unpublished{2023_DerechoAutor1,
-  author       = "José Hugo Barrón-Zambrano and Alan Díaz-Manríquez and Juan Carlos Elizondo-Leal and José David Filoteo-Razo  and  Daniel López-Aguirre and  José Ramón Martínez-Angulo and Marco Aurelio Nuño-Maganda and Vicente Paul Saldivar-Alonso and Jesús Sierra Martínez"
-  title        = "Aplicación Móvil para el Monitoreo de la Ingesta de Materia Seca en Pequeños Rumiantes",
-  howpublished = "Programa de Computación con Certificado de Registro Publico del Derecho de Autor ante el Instituto Nacional de Derecho de Autor.",
-  month        = "10",
-  year         = "2023",
-  note         = "",
-  annote       = ""
-}
-
-@unpublished{2022_TransferenciaTecnologica,
-  author       = "Yahir Hernández-Mier and Said Polanco-Martagón and Marco Aurelio Nuño-Maganda",
-  title        = "Monitoreo remoto de refrigeradores y cámaras frías de la red de frío del area de vacunación universal de la Secretaría de Salud",
-  howpublished = "Transferencia Tecnologica, Secretaría de Salud Tamaulipas",
-  month        = "08",
-  year         = "2022",
-  note         = "",
-  annote       = ""
-}
-
-@unpublished{2014_ProyectoPRODEPCA,
-  author       = "Hiram Herrera-Rivas and Yahir Hernández-Mier and Marco Aurelio Nuño-Maganda and Adrian Lopez-Mayorga and Hector Aviles-Arriaga",
-  title        = "Desarrollo de un Vehículo Robótico Terrestre con Navegación Autónoma Utilizable como Guía de Visitantes",
-  howpublished = "Proyecto de Cuerpo Academico PRODEP, 2013-2014",
-  month        = "08",
-  year         = "2014",
-  note         = "",
-  annote       = ""
-}
-
-@unpublished{2014_ProyectoPRODEPFOMIX,
-  author       = "Yahir Hernández-Mier and Hiram Herrera-Rivas and Marco Aurelio Nuño-Maganda",
-  title        = "Sistema Computacional para la Clasificación Automática de Cromosomas Auxiliar en el Diagnóstico Temprano de Enfermedades Genéticas",
-  howpublished = "Proyecto CONACYT - Fondos Mixtos Tamaulipas",
-  month        = "06",
-  year         = "2014",
-  note         = "",
-  annote       = ""
-}
-
-@unpublished{2011_ProyectoGlucometro,
-  author       = "Yahir Hernández-Mier and Hiram Herrera-Rivas and Marco Aurelio Nuño-Maganda",
-  title        = "Prototipo Mecatr\'onico Miniaturizado para Automatizar Procesos de Car\'acter Preventivo y Predictivo, Auxiliar en la toma de Decisiones en el Tratamiento de la Diabetes Mellitus",
-  howpublished = "Proyecto CONACYT - Fondos Mixtos Tamaulipas",
-  month        = "05",
-  year         = "2011",
-  note         = "",
-  annote       = ""
-}
-
-@unpublished{2005_ProyectoCamaraInfraroja,
-  author       = "Miguel Arias-Estrada and Marco Aurelio Nuño-Maganda",
-  title        = "C\'amara Infrarroja",
-  howpublished = "Proyecto CONACYT - Fondos Sectoriales (MARINA-2003-C02-11896/B1)",
-  month        = "12",
-  year         = "2005",
-  note         = "",
-  annote       = ""
-}
-
-@unpublished{2005_ProyectoCamaraInfraroja,
-  author       = "Miguel Arias-Estrada and Marco Aurelio Nuño-Maganda",
-  title        = "Sistema de Vigilancia A\'erea (SVA)",
-  howpublished = "Proyecto CONACYT - Fondos Sectoriales (MARINA-2002-C01-4636)",
-  month        = "06",
-  year         = "2004",
-  note         = "",
-  annote       = ""
+% Encoding: UTF-8
+@unpublished{Platica_Taller_2023a,
+    author       = {},
+    title        = {Aplicaciones de Realidad Aumentada y Realidad Virtual},
+    year = 2023,
+    month = 11,
+    day = 15,
+    howpublished = {3er. Semana Nacional del Conocimiento y la Innovacion.},
+    addendum     = {Ciudad Victoria, Tamaulipas, Mexico.}
 }
 
