--- a/Publications.tex
+++ b/Publications.tex
@@ -189,12 +189,12 @@ citecolor=green]{hyperref}
     \map{
       \perdatasource{Cursos.bib}
       \step[fieldset=keywords, fieldvalue={, }, appendstrict]
-      \step[fieldset=keywords, fieldvalue=CURSOS, append]
+      \step[fieldset=keywords, fieldvalue=Cursos, append]
     }
-    \map{
+    \map{                     
       \perdatasource{ColaboradorProyectos.bib}
       \step[fieldset=keywords, fieldvalue={, }, appendstrict]
-      \step[fieldset=keywords, fieldvalue=COLABORADOR, append]
+      \step[fieldset=keywords, fieldvalue=Colaborador, append]
     }
   }
 }
@@ -299,14 +299,14 @@ Publons:\ \  \textbf{\url{https://publons.com/researcher/1603078/marco-aurelio-n
 \section{Cursos}
 \begin{refsection}[Cursos]
 \nocite{*}
-\printbibliography[heading={none}, keyword=CURSOS, resetnumbers=true]
+\printbibliography[heading={none}, keyword=Cursos, resetnumbers=true]
 \end{refsection}
 
 % De uso exclusivo UPV
 \section{Colaborador en Proyectos de Investigacion y Desarrollo Tecnológico}
-\begin{refsection}[COLABORADOR]
+\begin{refsection}[Colaborador]
 \nocite{*}                                           
-\printbibliography[heading={none}, keyword=COLABORADOR, resetnumbers=true]
+\printbibliography[heading={none}, keyword=Colaborador, resetnumbers=true]
 \end{refsection}
 
 
