--- a/ColaboradorProyectos.bib
+++ b/ColaboradorProyectos.bib
@@ -1,5 +1,5 @@
 % Encoding: UTF-8
-@unpublished{Platica_Taller_2023a,
+@unpublished{Platica_Taller_2023axx,
     author       = {},
     title        = {Aplicaciones de Realidad Aumentada y Realidad Virtual},
     year = 2023,
