--- a/Publications.tex
+++ b/Publications.tex
@@ -303,11 +303,11 @@ Publons:\ \  \textbf{\url{https://publons.com/researcher/1603078/marco-aurelio-n
 \end{refsection}
 
 % De uso exclusivo UPV
-%\section{Colaborador en Proyectos de Investigacion y Desarrollo Tecnológico}
-%\begin{refsection}[Colaborador]
-%\nocite{*}                                           
-%\printbibliography[heading={none}, keyword=Colaborador, resetnumbers=true]
-%\end{refsection}
+\section{Colaborador en Proyectos de Investigacion y Desarrollo Tecnológico}
+\begin{refsection}[Colaborador]
+\nocite{*}                                           
+\printbibliography[heading={none}, keyword=Colaborador, resetnumbers=true]
+\end{refsection}
 
 
 
