--- a/Publications.tex
+++ b/Publications.tex
@@ -194,7 +194,7 @@ citecolor=green]{hyperref}
     \map{                     
       \perdatasource{ColaboradorProyectos.bib}
       \step[fieldset=keywords, fieldvalue={, }, appendstrict]
-      \step[fieldset=keywords, fieldvalue=Colaborador, append]
+      \step[fieldset=keywords, fieldvalue=ColaboradorProyectos, append]
     }
   }
 }
@@ -302,11 +302,10 @@ Publons:\ \  \textbf{\url{https://publons.com/researcher/1603078/marco-aurelio-n
 \printbibliography[heading={none}, keyword=Cursos, resetnumbers=true]
 \end{refsection}
 
-% De uso exclusivo UPV
 \section{Colaborador en Proyectos de Investigacion y Desarrollo Tecnológico}
-\begin{refsection}[Colaborador]
+\begin{refsection}[ColaboradorProyectos]
 \nocite{*}                                           
-\printbibliography[heading={none}, keyword=Colaborador, resetnumbers=true]
+\printbibliography[heading={none}, keyword=ColaboradorProyectos, resetnumbers=true]
 \end{refsection}
 
 
