--- a/Cursos.bib
+++ b/Cursos.bib
@@ -34,6 +34,14 @@
     year = 2023,
     month = 3}
 
+@unpublished{Curso2022cc,
+    author       = {},
+    title        = {Pautas para un Lenguaje Incluyente y sin Discriminación en la Docencia},
+    howpublished = {CONAPRED-MéxicoX},
+    year = 2022,
+    month = 12}
+
+
 @unpublished{Curso2022a,
     author       = {},
     title        = {The Complete Android 12 \& Kotlin Development Masterclass},
