--- a/DisticionesAcademicas.bib
+++ b/DisticionesAcademicas.bib
@@ -10,7 +10,7 @@
 
 @unpublished{2019_RecPRODEPA,
     author       = {},
-    title        = {Reconocimiento Perfil Deseable por parte del Programa de Desarrollo Profesional Docente (PRODEP). }
+    title        = {Reconocimiento Perfil Deseable por parte del Programa de Desarrollo Profesional Docente (PRODEP). },
     howpublished = {Vigencia: Julio 2016 a Julio de 2019},
     year = 2019,
     month = 07}
@@ -23,12 +23,6 @@
     month = 06}
 
 
-@unpublished{2015_RecPRODEPA,
-    author       = {},
-    title        = {Reconocimiento Perfil Deseable por parte del Programa de Mejoramiento del Profesorado (PROMEP).},
-    howpublished = {Vigencia: Junio de 2012 - Junio de 2015},
-    year = 2015,
-    month = 06}
 
 @unpublished{2008_RecITSA,
     author       = {},
