--- a/TesisDirigidasLicenciatura.bib
+++ b/TesisDirigidasLicenciatura.bib
@@ -73,6 +73,15 @@
 }
 
 
+@Misc{TesisUPV2024-09,
+  Title                    = {\textit{Optimización del Proceso de Escritura Académica Mediante el Desarrollo de un Sistema Web de Formateo de Archivos TEX}},
+  HowPublished             = {Tesis de Ingeniería en Tecnologías de la Información, Universidad Politécnica de Victoria},
+  Month                    = {8},
+  Author = {{César Zavala López}},
+  Year                     = {2024}
+}
+
+
 % 2023
 
 @Misc{TesisUPV2023-01,
