--- a/TesisDirigidasLicenciatura.bib
+++ b/TesisDirigidasLicenciatura.bib
@@ -81,6 +81,14 @@
   Year                     = {2024}
 }
 
+@Misc{TesisUPV2024-10,
+  Title                    = {\textit{Desarrollo de una Nueva Versión del Sistema Web Enterprise Management Portal (EMP) para la Empresa SVAM International de México}},
+  HowPublished             = {Tesis de Ingeniería en Tecnologías de la Información, Universidad Politécnica de Victoria},
+  Month                    = {8},
+  Author = {{Hernando Uriel Tores De Luna}},
+  Year                     = {2024}
+}
+
 
 % 2023
 
