--- a/TesisDirigidasLicenciatura.bib
+++ b/TesisDirigidasLicenciatura.bib
@@ -89,6 +89,13 @@
   Year                     = {2024}
 }
 
+@Misc{TesisUPV2024-11,
+  Title                    = {\textit{Implementación de ElasticSearch de SOFTSETI de México}},
+  HowPublished             = {Tesis de Ingeniería en Tecnologías de la Información, Universidad Politécnica de Victoria},
+  Month                    = {8},
+  Author = {{Circe Leonarda Monarrez Cruz}},
+  Year                     = {2024}
+}
 
 % 2023
 
