--- a/DifusionEnEventos.bib
+++ b/DifusionEnEventos.bib
@@ -7,6 +7,27 @@
 % Escenario 3: Se presento en el congreso (CONSTANCIA) y NO se publico (Requeria de mas arbitraje, o los requisitos solicitados eran impensables)
 
 
+% Escenario 3 (Potencial cambio a Escenario1 Si aparece publicado en la memoria del evento)
+@unpublished{Difusion2024d,
+    author       = {Christian Alejandro Saldaña-Calderón and Irving Jael Martinez-Aguilar and Jesus Guadalupe Herrera-Vanoye and Juan Eduardo Tovar-Diaz and Luis Antonio González-Castro and Yahir Hernández-Mier and Said Polanco-Martagón and Marco Aurelio Nuño-Maganda},
+    title        = {Floating-Assistant: An Educational Tool for Teaching Single and Double Floating Point Representations in Computer Programming Courses},
+    howpublished = {Congreso Argentino de Sistemas Embebidos CASE 2024},
+    %note={ \hyperlink{./../Evidencias/applsci-10-06846.pdf.1}{EVIDENCE}},
+    year = 2024,
+    month = 08,
+    addendum     = {Tucuman, Argentina}}
+
+% Escenario 3 (Potencial cambio a Escenario1 Si aparece publicado en la memoria del evento)
+@unpublished{Difusion2024c,
+    author       = {\textbf{M. A. Nuño-Maganda} and Lessly Gabriela Galván-Villanueva and  Angel David Mendoza-Valdez Yahir Hernández-Mier and Said Polanco-Martagón},
+    title        = {Diseño de un sistema de germinación automático monitoreado de manera remota usando visión por computadora},
+    howpublished = {Congreso Argentino de Sistemas Embebidos CASE 2024},
+    %note={ \hyperlink{./../Evidencias/applsci-10-06846.pdf.1}{EVIDENCE}},
+    year = 2024,
+    month = 08,
+    addendum     = {Tucuman, Argentina}}
+
+
 % Escenario 3 (Potencial cambio a Escenario1 dentro de algunos anos que se publique en Research in Computing Science)
 @unpublished{Difusion2024b,
     author       = {Jesus Armando Martínez-Vargas and Said Polanco-Martagón and Yahir Hernández-Mier and \textbf{M. A. Nuño-Maganda}},
