--- a/DifusionEnEventos.bib
+++ b/DifusionEnEventos.bib
@@ -79,6 +79,17 @@
 
 
 % Escenario 1 - Revista
+@unpublished{Difusion2022x,
+	AUTHOR = "Beatriz Anshel Sánchez-García and Said Polanco-Martagón and Yahir Hernández-Mier and \textbf{M. A. Nuño-Maganda} and Jorge Arturo Hernández-Almazán",
+	TITLE = "{Predicci\'on de Sonidos Pulmonares Sospechosos y No Sospechosos Mediante Redes Neuronales}",
+	YEAR = "2022",
+	month = {10},
+    howpublished = {Congreso Nacional de Investigacion Interinstitucional (CNII) 2022},
+    addendum     = {Colima, México}}
+
+
+
+% Escenario 1 - Revista
 @unpublished{Difusion2022a,
 	AUTHOR = "Beatriz Anshel Sánchez-García and Said Polanco-Martagón and Yahir Hernández-Mier and \textbf{M. A. Nuño-Maganda} and Jorge Arturo Hernández-Almazán",
 	TITLE = "{Suspicious Lung Disease Prediction from Auscultation Sounds Using Neural Networks}",
