--- a/DivulgacionCienciaTecnologia.bib
+++ b/DivulgacionCienciaTecnologia.bib
@@ -1,4 +1,15 @@
 % Encoding: UTF-8
+
+@unpublished{Platica_Taller_2024a,
+    author       = {},
+    title        = {Programación de Aplicaciones Móviles},
+    year = 2024,
+    month = 10,
+    day = 30,
+    howpublished = {Semana de la Ciencia y la Tecnología},
+    addendum     = {CBTis 236, Ciudad Victoria, Tamaulipas, Mexico}
+}
+
 @unpublished{Platica_Taller_2023a,
     author       = {},
     title        = {Aplicaciones de Realidad Aumentada y Realidad Virtual},
