--- a/Cursos.bib
+++ b/Cursos.bib
@@ -1,4 +1,11 @@
 
+@unpublished{Curso2024b,
+    author       = {},
+    title        = {OpenAI Python API Bootcamp: Learn to use AI, GPT, and more!},  
+    howpublished = {Udemy},
+    year = 2024,
+    month = 09}
+
 @unpublished{Curso2024a,
     author       = {},
     title        = {Mendix Rapid Developer Certification.},  
