--- a/CongresosEspanol.bib
+++ b/CongresosEspanol.bib
@@ -388,6 +388,30 @@ Hiram Herrera-Rivas and Marco Aurelio Nuño-Maganda",
   note        = {ISBN:  978-607-8857-77-7}
 }
 
+@incollection{MarcoNuno_CongArbEsp_2024_08A,
+  author      = {\textbf{M. A. Nuño-Maganda} and Lessly Gabriela Galván-Villanueva and Angel David Mendoza-Valdez and Yahir Hernández-Mier and Said Polanco-Martagón},
+  title       = {Diseño de un sistema de germinación automático monitoreado de manera remota usando visión por computadora},
+  editor      = "",
+  booktitle   = "Congreso Argentino de Sistemas Embebidos -CASE 2024 : libro de trabajos ",
+  publisher   = "Asociación Civil para la investigación, Promoción y Desarrollo de Sistemas Eléctricos Embebidos,",
+  address     = "Buenos Aires, Argentina",
+  year        = 2024,
+  Month       = 08,
+  pages       = "32-35",
+  note        = {ISBN:  978-631-90145-2-5}
+}
 
+@incollection{MarcoNuno_CongArbEsp_2024_08B,
+  author      = {Christian Alejandro Saldaña-Calderón and Irving Jael Martinez-Aguilar and Jesus Guadalupe Herrera-Vanoye and Juan Eduardo Tovar-Diaz and Luis Antonio González-Castro and Yahir Hernández-Mier and Said Polanco-Martagón  and \textbf{M. A. Nuño-Maganda}},
+  title       = {Floating-Assistant: An Educational Tool for Teaching Single and Double Floating Point Representations in Computer Programming Courses},
+  editor      = "",
+  booktitle   = "Congreso Argentino de Sistemas Embebidos -CASE 2024 : libro de trabajos ",
+  publisher   = "Asociación Civil para la investigación, Promoción y Desarrollo de Sistemas Eléctricos Embebidos,",
+  address     = "Buenos Aires, Argentina",
+  year        = 2024,
+  Month       = 08,
+  pages       = "50-53",
+  note        = {ISBN:  978-631-90145-2-5}
+}
 
 
