--- a/DifusionEnEventos.bib
+++ b/DifusionEnEventos.bib
@@ -7,6 +7,19 @@
 % Escenario 3: Se presento en el congreso (CONSTANCIA) y NO se publico (Requeria de mas arbitraje, o los requisitos solicitados eran impensables)
 
 
+
+
+% Escenario 1 - Revista
+@unpublished{Difusion2024e,
+    author = {Omar Alejandro Pérez-Reyes and Mario Coyoy-López and Dafne Patricia Moreno-Flores and Ramon Uriel Hernández-Sánchez and \textbf{M. A. Nuño-Maganda}},
+	title = {Aplicación PyQt6 para el Conteo en Tiempo Real: Un Caso de Estudio con Detección de Naranjas},
+    howpublished = {VI Congreso Internacional y XIV Congreso Nacional de Ciencias de la Computación},
+%    note={ \hyperlink{./../Evidencias/sensors-18-02202-v2.pdf.1}{EVIDENCE}},
+    year = 2024,
+    month = 10,
+    addendum     = {Puebla, Puebla, México}}
+
+
 % Escenario 3 (Potencial cambio a Escenario1 Si aparece publicado en la memoria del evento)
 @unpublished{Difusion2024d,
     author       = {Christian Alejandro Saldaña-Calderón and Irving Jael Martinez-Aguilar and Jesus Guadalupe Herrera-Vanoye and Juan Eduardo Tovar-Diaz and Luis Antonio González-Castro and Yahir Hernández-Mier and Said Polanco-Martagón and Marco Aurelio Nuño-Maganda},
