--- a/DifusionEnEventos.bib
+++ b/DifusionEnEventos.bib
@@ -5,9 +5,19 @@
 % Escenario 1: Se presento en el congreso (CONSTANCIA) y se publico (Memoria, Revista, Capitulo de Libro)
 % Escenario 2: No se presento en el congreso (NO HAY CONSTANCIA) y se publico (Memoria, Revista, Capitulo de Libro)
 % Escenario 3: Se presento en el congreso (CONSTANCIA) y NO se publico (Requeria de mas arbitraje, o los requisitos solicitados eran impensables)
+% Escenario 4: NO se presento en el congreso [Pero el congreso genero constancia](CONSTANCIA) y NO se publico (No se mando version solicitada, Requeria de mas arbitraje, o los requisitos solicitados eran impensables)
 
 
 
+% Escenario 4 - Congreso
+@unpublished{Difusion2024f,
+    author = {\textbf{Marco Aurelio Nuño-Maganda} and Yahir Hernandez-Mier and Angel David Mendoza-Valdez and Lessly Gabriela Galván-Villanueva and Said Polanco-Martagón},
+	title = {Diseño de Circuitos de Riego y Detección de Brotes por Visión por Computadora para un Germinador Automático},
+    howpublished = {VI Congreso Internacional y XIV Congreso Nacional de Ciencias de la Computación},
+%    note={ \hyperlink{./../Evidencias/sensors-18-02202-v2.pdf.1}{EVIDENCE}},
+    year = 2024,
+    month = 10,
+    addendum     = {Puebla, Puebla, México}}
 
 % Escenario 1 - Revista
 @unpublished{Difusion2024e,
