--- a/DifusionEnEventos.bib
+++ b/DifusionEnEventos.bib
@@ -8,10 +8,31 @@
 % Escenario 4: NO se presento en el congreso [Pero el congreso genero constancia](CONSTANCIA) y NO se publico (No se mando version solicitada, Requeria de mas arbitraje, o los requisitos solicitados eran impensables)
 
 
+% Escenario 1 - Congreso  - CONACIC 2024- PAper 39
+@unpublished{Difusion2024h,
+    author = {Alejandra Carolina Rodríguez-Porras and Luis Antonio Raga-Reyes and María Fernanda Parras-Pecina and Agustín Alejandro Mota-Hinojosa and \textbf{M. A. Nuño-Maganda}},
+	title = {Reconocimiento de Signos del Lenguaje de Señas Mexicano utilizando Redes Neuronales Convolucionales},
+    howpublished = {VI Congreso Internacional y XIV Congreso Nacional de Ciencias de la Computación},
+%    note={ \hyperlink{./../Evidencias/sensors-18-02202-v2.pdf.1}{EVIDENCE}},
+    year = 2024,
+    month = 10,
+    addendum     = {Puebla, Puebla, México}}
 
-% Escenario 4 - Congreso
+
+% Escenario 1 - Congreso  - CONACIC 2024- PAper 36
+@unpublished{Difusion2024g,
+    author = {Aldo de Jesus Peña-Cuellar and Jesús David Treviño-Gandarilla and Abraham Isai Cantu-Sanchez and Jose Guadalupe Martinez-Herrera and \textbf{M. A. Nuño-Maganda}},
+	title = {Aplicación para detección de Vehículos y Motocicletas desde un punto ciego del automóvil usando el modelo YOLO},
+    howpublished = {VI Congreso Internacional y XIV Congreso Nacional de Ciencias de la Computación},
+%    note={ \hyperlink{./../Evidencias/sensors-18-02202-v2.pdf.1}{EVIDENCE}},
+    year = 2024,
+    month = 10,
+    addendum     = {Puebla, Puebla, México}}
+
+
+% Escenario 4 - Congreso  - CONACIC 2024- PAper 21
 @unpublished{Difusion2024f,
-    author = {\textbf{Marco Aurelio Nuño-Maganda} and Yahir Hernandez-Mier and Angel David Mendoza-Valdez and Lessly Gabriela Galván-Villanueva and Said Polanco-Martagón},
+    author = {\textbf{M. A. Nuño-Maganda} and Yahir Hernandez-Mier and Angel David Mendoza-Valdez and Lessly Gabriela Galván-Villanueva and Said Polanco-Martagón},
 	title = {Diseño de Circuitos de Riego y Detección de Brotes por Visión por Computadora para un Germinador Automático},
     howpublished = {VI Congreso Internacional y XIV Congreso Nacional de Ciencias de la Computación},
 %    note={ \hyperlink{./../Evidencias/sensors-18-02202-v2.pdf.1}{EVIDENCE}},
@@ -19,7 +40,7 @@
     month = 10,
     addendum     = {Puebla, Puebla, México}}
 
-% Escenario 1 - Revista
+% Escenario 1 - Revista - CONACIC 2024- PAper 14
 @unpublished{Difusion2024e,
     author = {Omar Alejandro Pérez-Reyes and Mario Coyoy-López and Dafne Patricia Moreno-Flores and Ramon Uriel Hernández-Sánchez and \textbf{M. A. Nuño-Maganda}},
 	title = {Aplicación PyQt6 para el Conteo en Tiempo Real: Un Caso de Estudio con Detección de Naranjas},
