--- a/DifusionEnEventos.bib
+++ b/DifusionEnEventos.bib
@@ -7,6 +7,17 @@
 % Escenario 3: Se presento en el congreso (CONSTANCIA) y NO se publico (Requeria de mas arbitraje, o los requisitos solicitados eran impensables)
 % Escenario 4: NO se presento en el congreso [Pero el congreso genero constancia](CONSTANCIA) y NO se publico (No se mando version solicitada, Requeria de mas arbitraje, o los requisitos solicitados eran impensables)
 
+% Escenario 1 - Congreso  - CONACIC 2024- PAper 52
+@unpublished{Difusion2024j,
+    author = {Adrián Alejandro Ruiz-Márquez and Brayan Olivares-Rodriguez and Javier Martin Palmero-Torres and Ana Cecilia Rodríguez-Chávez and \textbf{M. A. Nuño-Maganda}},
+	title = {Desarrollo de una Aplicación para la Detección y Conteo de Monedas en Video en Tiempo Real Utilizando OpenCV y PyQt6},
+    howpublished = {VI Congreso Internacional y XIV Congreso Nacional de Ciencias de la Computación},
+%    note={ \hyperlink{./../Evidencias/sensors-18-02202-v2.pdf.1}{EVIDENCE}},
+    year = 2024,
+    month = 10,
+    addendum     = {Puebla, Puebla, México}}
+
+% Falta CONSTANCIA del Articulo de Melchor - CONACIC 2024- PAper 40
 
 % Escenario 1 - Congreso  - CONACIC 2024- PAper 39
 @unpublished{Difusion2024h,
