--- a/Revistas.bib
+++ b/Revistas.bib
@@ -1,6 +1,35 @@
 % Encoding: UTF-8
 % Revistas JCR, SCIMAGOJR o LATININDEX
 
+
+@Article{MarcoNuno_Revista_2024_12_00,
+	AUTHOR = {\textbf{M. A. Nuño-Maganda} and Yahir Hernandez-Mier and Angel David Mendoza-Valdez and Lessly Gabriela Galván-Villanueva and Said Polanco-Martagón},
+	TITLE = "{Sistema de monitoreo remoto de humedad, temperatura y estado de los brotes en un germinador automático}",
+	YEAR = "2024",
+	month = {12},
+	JOURNAL = "Elektron",
+	VOLUME = "8",
+    number = {2},
+    doi = {10.37537/rev.elektron.8.2.196.2024},
+	note = "{\textbf{{ISSN: 2525-0159}}}"
+}
+
+
+
+@Article{MarcoNuno_Revista_2024_09_00,
+	AUTHOR = {\textbf{M. A. Nuño-Maganda} and  Omar Alejandro Pérez Reyes and Mario Coyoy López and Dafne Patricia Moreno Flores and Ramon Uriel Hernández Sánchez},
+	TITLE = "{Aplicación PyQt6 para el conteo en tiempo real: un caso de estudio con detección de naranjas}",
+	YEAR = "2024",
+	month = {09},
+	JOURNAL = "Abstraction \& Application",
+	VOLUME = "27",
+    number = {2024},
+    URL = {https://intranet.matematicas.uady.mx/journal/descargar.php?id=371},
+	note = "{\textbf{{ISSN:  2007-2635}}}"
+}
+
+
+
 @article{MarcoNuno_Revista_2024_06_00,
     author = {José Fidencio López-Luna and Eddie Nahúm Armendáriz-Mireles and \textbf{M. A. Nuño-Maganda} and Hiram Herrera-Rivas and Rubén Machucho-Cadena and Jorge Arturo Hernández-Almazán},
     title ={Design and validation of a preliminary instrument to contextualize interactions through information technologies of health professionals},
@@ -14,9 +43,6 @@
     URL = { https://doi.org/10.1177/14604582241259323},
     eprint = {https://doi.org/10.1177/14604582241259323}
 }
-
-
-
 
 @Article{MarcoNuno_Revista_2023_10_00,
 	AUTHOR = "Jorge de la Calleja and Elsa de la Calleja and Hujo Jair-Escalante and Eduardo López-Domínguez and María Áuxilio Medina-Nieto and \textbf{M. A. Nuño-Maganda}",
@@ -56,7 +82,8 @@
 	issue=3,
 	pages = {134--143},
 	month = {9},
-	note={\url{https://intranet.matematicas.uady.mx/journal/descargar.php?id=308}}
+	note={\url{https://intranet.matematicas.uady.mx/journal/descargar.php?id=308}},
+	note = "{\textbf{{ISSN:  2007-2635}}}"
 }
 
 % LATININDEX
