--- a/Revistas.bib
+++ b/Revistas.bib
@@ -22,6 +22,7 @@
 	YEAR = "2024",
 	month = {09},
 	JOURNAL = "Abstraction \& Application",
+	pages = {66--73},
 	VOLUME = "27",
     number = {2024},
     URL = {https://intranet.matematicas.uady.mx/journal/descargar.php?id=371},
@@ -82,7 +83,7 @@
 	issue=3,
 	pages = {134--143},
 	month = {9},
-	note={\url{https://intranet.matematicas.uady.mx/journal/descargar.php?id=308}},
+	url={https://intranet.matematicas.uady.mx/journal/descargar.php?id=308},
 	note = "{\textbf{{ISSN:  2007-2635}}}"
 }
 
