--- a/TesisDirigidasMaestria.bib
+++ b/TesisDirigidasMaestria.bib
@@ -1,3 +1,20 @@
+@Misc{TesisHomeroSimpson,
+Author = {{Homero Pérez Mata}},
+title     =     {\textit{Sistema de supervisión de aeroponía autónomo mediante el uso de TinyML}},
+HOWPUBLISHED = {Tesis de Maestría en Ingeniería, Universidad Politécnica de Victoria},
+Year = 2024,
+month={12}}
+
+
+@Misc{TesisJuanEduardo,
+Author = {{Juan Eduardo Rivera López}},
+title     =     {\textit{Desarrollo de un robot cilíndrico para el monitoreo remoto de un sistema hidropónico vertical}},
+HOWPUBLISHED = {Tesis de Maestría en Ingeniería, Universidad Politécnica de Victoria},
+Year = 2024,
+month={11}}
+
+
+
 @Misc{TesisDavid,
 Author = {{David Josué Esquivel Godoy}},
 title     =     {\textit{Diseño y Construcción de un Sistema Hidropónico de Técnica de Flujo Profundo Controlado por Lógica Difusay Supervisado Mediante Internet de la Cosas}},
