--- a/Publications.tex
+++ b/Publications.tex
@@ -1,33 +1,15 @@
 %-------------------------
-% Resume in Latex
-% Author : Gennadii Chursov
 % Based off of: https://github.com/sb2nov/resume and https://www.overleaf.com/latex/templates/jakes-resume/syzfjbzwjncs
 % License : MIT
 %------------------------
 
 % Curriculum Unificado: Mismo documento para obtener publicaciones, lista de platicas
 \documentclass[letterpaper,11pt]{article}
-
-%\usepackage[
-%colorlinks,
-%linkcolor=blue,
-%citecolor=green,
-%pdftex=true,
-%bookmarks=true,
-%bookmarksopen=false,
-%pdftitle={Listado de Publicaciones},
-%pdfsubject={Reporte Final de Proyecto},
-%pdfkeywords={FPGAs, Reconfigurable Computing, Machine Learning, Computer Vision},
-%pdfauthor={Marco Aurelio Nu\~no Maganda}
-%]{hyperref}
-
 \usepackage{pdfpages}
-
 \usepackage{latexsym}
 \usepackage[empty]{fullpage}
 \usepackage{titlesec}
 \usepackage{marvosym}
-%\usepackage[usenames,dvipsnames]{color}
 \usepackage{verbatim}
 \usepackage{enumitem}
 \usepackage[colorlinks,
@@ -41,7 +23,7 @@ citecolor=green]{hyperref}
 
 \pagestyle{fancy}
 \fancyhf{} % clear all header and footer fields
-\fancyfoot{}
+\fancyfoot[R]{\thepage}
 \renewcommand{\headrulewidth}{0pt}
 \renewcommand{\footrulewidth}{0pt}
 
