--- a/Publications.tex
+++ b/Publications.tex
@@ -4,7 +4,7 @@
 %------------------------
 
 % Curriculum Unificado: Mismo documento para obtener publicaciones, lista de platicas
-\documentclass[letterpaper,11pt]{article}
+\documentclass[letterpaper,10pt]{article}
 \usepackage{pdfpages}
 \usepackage{latexsym}
 \usepackage[empty]{fullpage}
@@ -23,7 +23,9 @@ citecolor=green]{hyperref}
 
 \pagestyle{fancy}
 \fancyhf{} % clear all header and footer fields
-\fancyfoot[R]{\thepage}
+%\fancyfoot[R]{\thepage}
+%\fancyfoot[R]{Page \thepage \hspace{1pt} of \pageref{LastPage}}
+\fancyfoot[R]{Página \thepage \hspace{1pt} de \pageref{LastPage}}
 \renewcommand{\headrulewidth}{0pt}
 \renewcommand{\footrulewidth}{0pt}
 
