--- a/Publications.tex
+++ b/Publications.tex
@@ -19,6 +19,7 @@ citecolor=green]{hyperref}
 \usepackage[spanish]{babel}
 \usepackage{tabularx}
 \input{glyphtounicode}
+\usepackage{lastpage}
 
 
 \pagestyle{fancy}
