--- a/Revistas.bib
+++ b/Revistas.bib
@@ -23,7 +23,7 @@
 	month = {09},
 	JOURNAL = "Abstraction \& Application",
 	pages = {66--73},
-	VOLUME = "27",
+	VOLUME = "47",
     number = {2024},
     URL = {https://intranet.matematicas.uady.mx/journal/descargar.php?id=371},
 	note = "{\textbf{{ISSN:  2007-2635}}}"
@@ -39,10 +39,10 @@
     number = {2},
     pages = {14604582241259323},
     year = {2024},
-    doi = {10.1177/14604582241259323},
-        note ={PMID: 38886113},
-    URL = { https://doi.org/10.1177/14604582241259323},
-    eprint = {https://doi.org/10.1177/14604582241259323}
+    doi = {10.1177/14604582241259323}
+    %note ={PMID: 38886113},
+    %URL = { https://doi.org/10.1177/14604582241259323},
+    %eprint = {https://doi.org/10.1177/14604582241259323}
 }
 
 @Article{MarcoNuno_Revista_2023_10_00,
