--- a/DifusionEnEventos.bib
+++ b/DifusionEnEventos.bib
@@ -18,6 +18,15 @@
     addendum     = {Puebla, Puebla, México}}
 
 % Falta CONSTANCIA del Articulo de Melchor - CONACIC 2024- PAper 40
+@unpublished{Difusion2024i,
+    author = {Melchor Hernández-Diaz and Jesús Antonio Barbosa-Rodríguez and Ximena Abigaíl Moreno-Ledezma and Juan Daniel Torres-Colorado and José Hubo Barrón-Zambrano and \textbf{M. A. Nuño-Maganda}},
+	title = {Identificador de Género mediante Audio},
+    howpublished = {VI Congreso Internacional y XIV Congreso Nacional de Ciencias de la Computación},
+%    note={ \hyperlink{./../Evidencias/sensors-18-02202-v2.pdf.1}{EVIDENCE}},
+    year = 2024,
+    month = 10,
+    addendum     = {Puebla, Puebla, México}}
+
 
 % Escenario 1 - Congreso  - CONACIC 2024- PAper 39
 @unpublished{Difusion2024h,
