--- a/CongresosEspanol.bib
+++ b/CongresosEspanol.bib
@@ -118,7 +118,7 @@
 }
 
 @Article{MarcoNuno_CongArbEsp_2014_09_01,
-	author = "Raul Humberto Pe{\~n}a González and \textbf{M. A. Nuño-Maganda}",
+	author = "Raul Humberto Pe{\~n}a-González and \textbf{M. A. Nuño-Maganda}",
 	title = "{Sistema de visión para la clasificación y seguimiento de vehículos en tiempo real}",
 	journal = "{Avances en Tecnologías de la Información, Mecatrónica y Tecnología de los Materiales}",
 	year = "2014",
@@ -128,7 +128,7 @@
 }
 
 @Article{MarcoNuno_CongArbEsp_2014_09_02,
-	author = "Luis Rodolfo García García and \textbf{M. A. Nuño-Maganda} and Yahir Hernández-Mier",
+	author = "Luis Rodolfo García-García and \textbf{M. A. Nuño-Maganda} and Yahir Hernández-Mier",
 	title = "{Detección de Llantas Basada en Imágenes}",
 	journal = "{Avances en Tecnologías de la Información, Mecatrónica y Tecnología de los Materiales}",
 	year = "2014",
@@ -163,7 +163,7 @@ Hiram Herrera-Rivas and Marco Aurelio Nuño-Maganda",
 
 %%% 2015
 @Article{MarcoNuno_CongArbEsp_2015_09_01A,
-	author = "María del Refugio García Chávez and Yahir Hernández Mier and \textbf{M. A. Nuño-Maganda}",
+	author = "María del Refugio García-Chávez and Yahir Hernández-Mier and \textbf{M. A. Nuño-Maganda}",
 	title = "{Evaluación de algoritmos de aprendizaje máquina para la clasificación automática de cromosomas}",
 	journal = "{Avances en Tecnologías de la Información, Mecatrónica y Tecnología de los Materiales II}",
 	year = "2015",
@@ -183,7 +183,7 @@ Hiram Herrera-Rivas and Marco Aurelio Nuño-Maganda",
 }
 
 @Article{MarcoNuno_CongArbEsp_2015_09_01C,
-	author = "Luis Felipe Cortes Mendoza and \textbf{M. A. Nuño-Maganda}",
+	author = "Luis Felipe Cortes-Mendoza and \textbf{M. A. Nuño-Maganda}",
 	title = "{Diseño e implementación de una aplicación móvil para administrar listas de compras}",
 	journal = "{Avances en Tecnologías de la Información, Mecatrónica y Tecnología de los Materiales II}",
 	year = "2015",
@@ -193,7 +193,7 @@ Hiram Herrera-Rivas and Marco Aurelio Nuño-Maganda",
 }
 
 @Article{MarcoNuno_CongArbEsp_2015_09_01D,
-	author = "José Alberto López Montelongo and José Carlos Huerta Gutiérrez and \textbf{M. A. Nuño-Maganda}",
+	author = "José Alberto López-Montelongo and José Carlos Huerta-Gutiérrez and \textbf{M. A. Nuño-Maganda}",
 	title = "{Diseño e implementación de una aplicación móvil para administrar un cuaderno de tareas virtual}",
 	journal = "{Avances en Tecnologías de la Información, Mecatrónica y Tecnología de los Materiales II}",
 	year = "2015",
@@ -204,7 +204,7 @@ Hiram Herrera-Rivas and Marco Aurelio Nuño-Maganda",
 
 
 @Article{MarcoNuno_CongArbEsp_2015_09_01E,
-	author = "Juan Emmanuel Mendoza Morales  and Norma Priscila Rodriguez Reyes and \textbf{M. A. Nuño-Maganda}",
+	author = "Juan Emmanuel Mendoza-Morales  and Norma Priscila Rodriguez-Reyes and \textbf{M. A. Nuño-Maganda}",
 	title = "{Diseño e Implementación de aplicación para seguimiento de objetos mediante lecturas del sensor GPS}",
 	journal = "{Avances en Tecnologías de la Información, Mecatrónica y Tecnología de los Materiales II}",
 	year = "2015",
@@ -263,7 +263,7 @@ Hiram Herrera-Rivas and Marco Aurelio Nuño-Maganda",
 }
 
 @Article{MarcoNuno_CongArbEsp_2020_12_01,
-	author = {Victor Manuel Gloria Vázquez and Said Polanco Martagon and Miguel Ibarra Sanchez and \textbf{Marco Aurelio Nuño-Maganda} and Yahir Hernández Mier},
+	author = {Victor Manuel Gloria-Vázquez and Said Polanco-Martagon and Miguel Ibarra-Sanchez and \textbf{Marco Aurelio Nuño-Maganda} and Yahir Hernández-Mier},
 	title = {Algoritmo genético multiobjetivo para optimización topológica de una red neuronal},
 	journal = {Jornada de Ciencia y Tecnología Aplicada},
 	year = {2020},	
@@ -273,7 +273,7 @@ Hiram Herrera-Rivas and Marco Aurelio Nuño-Maganda",
 }
 
 @Article{MarcoNuno_CongArbEsp_2021_06_01,
-	author = {Daniel Humberto Villatoro-Carranco and \textbf{Marco Aurelio Nuño-Maganda} and Yahir Hernández Mier and Said Polanco Martagon},
+	author = {Daniel Humberto Villatoro-Carranco and \textbf{Marco Aurelio Nuño-Maganda} and Yahir Hernández-Mier and Said Polanco-Martagon},
 	title = {Comparación de detectores faciales para un sistema de videovigilancia de bajo costo},
 	journal = {Jornada de Ciencia y Tecnología Aplicada},
 	year = {2021},	
