--- a/Publications.tex
+++ b/Publications.tex
@@ -306,7 +306,7 @@ Publons:\ \  \textbf{\url{https://publons.com/researcher/1603078/marco-aurelio-n
 
 % De uso exclusivo UPV - Duplicados entre Congresos, Cap de Libro y Revistas
 \section{Gestion Académica}
-\begin{refsection}[GestionAcademica]
+\begin{refsection}[Gestion]
 \nocite{*}
 \printbibliography[heading={none}, keyword=Gestion, resetnumbers=true]
 \end{refsection}
