--- a/Gestion.bib
+++ b/Gestion.bib
@@ -1,24 +1,25 @@
 
 
-@misc{MarcoNunoTesisLicenciatura_2002,
-   Author = {\textbf{Marco Aurelio Nuño-Maganda}},  
-  TITLE = {\textit{Una Arquitectura FPGA para la Pirámide Multiresolución}},
-  YEAR = 2002,
-  month=dec,
-  HOWPUBLISHED = {Tesis de Licenciatura con Mención Honorífica. Universidad Americada de Acapulco. Facultad de Ingeniería en Computación (incorporada a la Universidad Nacional Autónoma de México)}}
+@misc{2024_Miembro,
+  Author = {},  
+  TITLE = {Miembro del comité de programa de la \textit{21st International Conference on Electrical
+Engineering, Computing Science and Automatic Control (CCE)}},
+  YEAR = 2024,
+  month=oct,
+  HOWPUBLISHED = {}}
 
-@misc{ MarcoNunoTesisDoctorado_2009B,
-Author = {\textbf{Marco Aurelio Nuño-Maganda}},
-Title = {\textit{A High Performance Hardware Architecture for Multilayer Spiking Neural Networks}},
-Year = {2009},
-HOWPUBLISHED = {Tesis de Doctorado en Ciencias con Especialidad en Ciencias Computacionales. Instituto Nacional de Astrofísica, Óptica y Electrónica (INAOE)},
-month=oct
-}
+@misc{2023_Miembro,
+  Author = {},  
+  TITLE = {Miembro del comité de programa de la \textit{20th International Conference on Electrical
+Engineering, Computing Science and Automatic Control (CCE)}},
+  YEAR = 2024,
+  month=oct,
+  HOWPUBLISHED = {}}
 
-@Misc{MarcoNunoTesisMaestria_2003B,
-Author = {\textbf{Marco Aurelio Nuño-Maganda}},
-    title     =     {\textit{Una Arquitectura FPGA para el Seguimiento de Objetos utilizando Procesamiento Piramidal}},
-HOWPUBLISHED = {Tesis de Maestría en Ciencias con Especialidad en Ciencias Computacionales. Instituto Nacional de Astrofísica, Óptica y Electrónica (INAOE)},
-Year = {2003},
-month=sep}
-
+@misc{2022_Miembro,
+  Author = {},  
+  TITLE = {Miembro del comité de programa de la \textit{19th International Conference on Electrical
+Engineering, Computing Science and Automatic Control (CCE)}},
+  YEAR = 2024,
+  month=oct,
+  HOWPUBLISHED = {}}
