--- a/Gestion.bib
+++ b/Gestion.bib
@@ -1,6 +1,6 @@
 
 
-@misc{2024_Miembro,
+@misc{2024_MiembroCCE,
   Author = {},  
   TITLE = {Miembro del comité de programa de la \textit{21st International Conference on Electrical
 Engineering, Computing Science and Automatic Control (CCE)}},
@@ -8,18 +8,33 @@ Engineering, Computing Science and Automatic Control (CCE)}},
   month=oct,
   HOWPUBLISHED = {}}
 
-@misc{2023_Miembro,
+@misc{2024_RevisorTequio,
+  Author = {},  
+  TITLE = {Revisor de Artículos para la Revista TEQUIO en el Primer Congreso de Ciencia, Tecnología e Innovación},
+  YEAR = 2024,
+  month=may,
+  HOWPUBLISHED = {}}
+
+@misc{2023_EvaluadorCienciaFrontera,
+  Author = {},  
+  TITLE = {Evaluador de proyectos de la convocatoria CONACYT Ciencia de Frontera 2023},
+  YEAR = 2023,
+  month=mar,
+  HOWPUBLISHED = {}}
+
+
+@misc{2023_MiembroCCE,
   Author = {},  
   TITLE = {Miembro del comité de programa de la \textit{20th International Conference on Electrical
 Engineering, Computing Science and Automatic Control (CCE)}},
-  YEAR = 2024,
+  YEAR = 2023,
   month=oct,
   HOWPUBLISHED = {}}
 
-@misc{2022_Miembro,
+@misc{2022_MiembroCCE,
   Author = {},  
   TITLE = {Miembro del comité de programa de la \textit{19th International Conference on Electrical
 Engineering, Computing Science and Automatic Control (CCE)}},
-  YEAR = 2024,
+  YEAR = 2022,
   month=oct,
   HOWPUBLISHED = {}}
